2009-10-31  Chong Yidong  <cyd@stupidchicken.com>

	* menu-bar.el (menu-bar-tools-menu): Add Semantic and EDE menu
	items.

	* cedet/cedet.el (cedet-menu-map): Remove Semantic and EDE menu
	items.

	* cedet/ede.el (ede-minor-mode):
	* cedet/semantic.el (semantic-mode): Toggle menu separators.

2009-10-31  Stefan Monnier  <monnier@iro.umontreal.ca>

	* textmodes/two-column.el (2C-split):
	* textmodes/texnfo-upd.el (texinfo-multi-file-included-list):
	* textmodes/tex-mode.el (tex-set-buffer-directory):
	* textmodes/spell.el (spell-region, spell-string):
	* textmodes/reftex.el (reftex-erase-buffer):
	(reftex-get-file-buffer-force, reftex-kill-temporary-buffers):
	* textmodes/reftex-toc.el (reftex-toc-promote-action):
	* textmodes/reftex-sel.el (reftex-get-offset, reftex-insert-docstruct)
	(reftex-select-item):
	* textmodes/reftex-ref.el (reftex-label-info-update)
	(reftex-offer-label-menu):
	* textmodes/reftex-index.el (reftex-index-change-entry)
	(reftex-index-phrases-info):
	* textmodes/reftex-global.el (reftex-create-tags-file)
	(reftex-save-all-document-buffers, reftex-ensure-write-access):
	* textmodes/reftex-dcr.el (reftex-echo-ref, reftex-echo-cite)
	(reftex-view-crossref-from-bibtex):
	* textmodes/reftex-cite.el (reftex-bibtex-selection-callback)
	(reftex-extract-bib-entries-from-thebibliography)
	(reftex-all-used-citation-keys, reftex-create-bibtex-file):
	* textmodes/refbib.el (r2b-capitalize-title):
	(r2b-convert-buffer, r2b-help):
	* textmodes/page-ext.el (pages-directory)
	(pages-directory-goto-with-mouse):
	* textmodes/bibtex.el (bibtex-validate-globally):
	* textmodes/bib-mode.el (bib-capitalize-title):
	* textmodes/artist.el (artist-clear-buffer, artist-system):
	* progmodes/xscheme.el (global-set-scheme-interaction-buffer):
	(local-set-scheme-interaction-buffer, xscheme-process-filter)
	(verify-xscheme-buffer, xscheme-enter-interaction-mode)
	(xscheme-enter-debugger-mode, xscheme-debugger-mode-p)